# Redes_de_Computadoras-2021-1

./: LICENSE  README.md
ChatBot/: app.py
Practica1/: .env  cliente.py  pyproject.toml  servidor.py
Practica4/: Dibujos.xlsx  README.md  sniffer.py
Pruebas/ChatBot/: app.py  pyproject.toml
Pruebas/Orquestador-V2/: .env  orquestador.py  pyproject.toml  servidor.py
Tarea1/: Actividad2.txt
Tarea1/Actividad1/: DescripcionDelAlgoritmo.ipynb  Domino.java  Ficha.java  Jugador.java
